--- a/itahm.html
+++ b/itahm.html
@@ -192,6 +192,8 @@ function showChart(ip) {
 				<ul>
 					<li><a id="signout"></a>
 					<li><a href="setting.html" target="main">설정</a>
+					<li><a href="setting2.html" target="main">설정2</a>
+					<li><a href="test2.html" target="main">설정whec</a>
 					<li><a href="icon.html" target="main">아이콘</a>
 					<li><a id="message">메세지</a>
 					<li><a id="reload">재시작</a>
