--- a/wheclog.html
+++ b/wheclog.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="Cache-Control" content="No-Cache">
 
-	<title>test1</title>
+	<title>WHEC Log System</title>
 	<style>
 body,
 input {
@@ -354,6 +354,8 @@ function parseData(data) {
 	}
 	
 	window.log.appendChild(df);
+	
+	window.log.scrollTop = window.log.scrollHeight;
 	
 	window.count.textContent = count;
 }
