--- a/2.0.3.2/group_dialog.html
+++ b/2.0.3.2/group_dialog.html
@@ -7,7 +7,7 @@
 		<title>dialog</title>
 		
 		<style>
-@import "css/itahm.css";
+@import "/css/itahm.css";
 
 body {
 	position: fixed; top: 0; right: 0; bottom: 0; left: 0;
@@ -21,7 +21,6 @@ form {
 	width: 300px;
 	padding: 20px;
 	background-color: #fff;
-	/*box-shadow: 0px 0px 20px 10px #ddd;*/
 }
 
 .table {
