--- a/chart.html
+++ b/chart.html
@@ -13,8 +13,6 @@
 body {
 	position: fixed; top: 10px; right: 10px; bottom: 10px; left: 10px;
 	margin: 0; padding: 0;
-	display: flex;
-	flex-direction: column;
 }
 
 input[type=date] {
@@ -28,7 +26,7 @@ header {
 }
 
 .chart {
-	flex: 1;
+	position: absolute; top: 0; right: 0; bottom: 40px; left: 0;
 }
 
 iframe {
@@ -54,9 +52,8 @@ body.move {
 }
 
 footer {
+	position: absolute; right: 16px; bottom: 0; left: 16px;
 	height: 40px;
-	position: relative;
-	margin: 0 16px;
 	background-color: rgba(99, 99, 99, .1);
 	color: #fff;
 	/*border: solid #999;
@@ -402,7 +399,10 @@ function clear(e) {
 		</script>
 	</head>
 	
-	<body>
+	<body>		
+		<div class="chart">
+			<iframe id="chart"></iframe>
+		</div>
 		
 		<header>
 			<nav>
@@ -412,10 +412,6 @@ function clear(e) {
 				<img id="print" width="16" height="16" src="img/printer16.png" title="인쇄">
 			</nav>
 		</header>
-		
-		<div class="chart">
-			<iframe id="chart"></iframe>
-		</div>
 		
 		<footer>
 			<div id="grid"></div>
