--- a/chart_throughput.html
+++ b/chart_throughput.html
@@ -40,12 +40,15 @@ body.row #chart {
 
 .chart {
 	flex: 1;
-	display: flex;
-	flex-direction: column;
+	position: relative;
+}
+
+.chart >h3 {
+	position: absolute; top: 0; right: 0; left: 0; height: 20px;
 }
 
 .chart >div {
-	flex: 1;
+	position: absolute; top: 20px; right: 0; left: 0; bottom: 0;
 }
 
 iframe {
@@ -101,6 +104,7 @@ form {
 	padding: 1em;
 	background-color: #f0f0f0;
 	position: absolute; top: 0; right: 0;
+	z-index: 9;
 }
 
 #speed {
