--- a/console.html
+++ b/console.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>Connect @ ITAhM</title>
+		<title>ITAhM Console</title>
 		
 		<style>
 
@@ -297,7 +297,7 @@ function showStatus(id, resource, index) {
 		statusWindow.close();
 	}
 	
-	statusWindow = window.open("status.html", id);
+	statusWindow = window.open("/status.html", id);
 	
 	window.statusWindow[id] = statusWindow;
 	
@@ -308,6 +308,16 @@ function showStatus(id, resource, index) {
 	}
 	
 	statusWindow.focus();
+}
+
+function setHeader() {
+	setMenu(window.databases.config.menu? true: false);
+	
+	const config = window.databases.config;
+	
+	if ("expire" in config && config.expire > 0 && !config.license) {
+		document.getElementById("expire").textContent = toDateString(window.databases.config.expire);
+	}
 }
 
 // public
@@ -321,17 +331,27 @@ function setMenu(b) {
 } 
 
 //public
-function setDevice(id, device) {
-	if (device.ip) {
-		window.index[device.ip] = id;
+function getDeviceID(ip) {
+	const monitor = window.databases.monitor[ip];
+	
+	if (!monitor) {
+		return ip;
 	}
 	
-	window.databases.device[id] = device;
-}
-
-//public
-function getDeviceID(ip) {
-	return window.index[ip];
+	if ("id" in monitor) {
+		return monitor.id;
+	}
+	else {
+		const deviceData = top.databases.device;
+		var device;
+		for (let id in deviceData) {
+			device = deviceData[id];
+			
+			if (device.ip === ip) {
+				return monitor.id = id;
+			}
+		}
+	}
 }
 
 // public
@@ -352,16 +372,6 @@ function showDialog() {
 // public
 function closeDialog() {
 	document.body.classList.remove("dialog");
-}
-
-function setHeader() {
-	setMenu(window.databases.config.menu? true: false);
-	
-	const config = window.databases.config;
-	
-	if ("expire" in config && config.expire > 0 && !config.license) {
-		document.getElementById("expire").textContent = toDateString(window.databases.config.expire);
-	}
 }
 
 function clearLog() {
@@ -424,17 +434,20 @@ function onInitialize() {
 	// TODO ITAhM의 시작.
 	setHeader();
 	
-	// old 버전 호환
-	var group;
-	for (var id in databases.device) {
-		group = databases.device[id];
+	// old 버전 호환, indexing
+	var device;
+	
+	const deviceData = window.databases.device;
+	
+	for (let id in deviceData) {
+		device = deviceData[id];
 		
-		if (!group.group) {
+		if (!device.group) {
 			continue;
 		}
 		
-		if (!("id" in group)) {
-			group.id = id;
+		if (!("id" in device)) {
+			device.id = id;
 		}
 	}
 	
@@ -450,7 +463,7 @@ function onUpdate() {
 		if (!window.initialized) {
 			window.initialized = true;
 			
-			window.frame.src = "dashboard.html";
+			window.frame.src = "2.0.3.2/dashboard.html";
 		}
 	}
 	else {
@@ -470,7 +483,8 @@ function update() {
 	
 	xhr.send(JSON.stringify({
 		command: "extra",
-		extra: "top"
+		extra: "top",
+		count: window.databases.config.top || undefined
 	}));
 }
 
@@ -514,14 +528,15 @@ function onEvent(e) {
 	e.stopPropagation();
 	
 	if (this.status === 200) {
-		const event = JSON.parse(this.responseText);
+		const event = JSON.parse(this.responseText),
+			id = getDeviceID(event.ip);
 		
 		window.listener.index = parseInt(event.index) +1;
 		
 		window.logCount++;
 		
 		window.count.textContent = window.logCount > 9? "9+": window.logCount;
-		window.log.textContent = getDeviceName(event.ip) +" "+ event.message;
+		window.log.textContent = (id && window.databases.device[id].name || "")  +" "+ event.message;
 		
 		if (!event.status) {
 			window.sound.play();
@@ -603,7 +618,7 @@ function onConnect(e) {
 	
 	const agent = ip.value +":" +tcp.value;
 	
-	window.agent += agent;
+	window.agent = "http://"+ agent;
 	
 	document.body.classList.add("loading");
 	
@@ -655,7 +670,7 @@ function parseResponse(onResponse, custom) {
 		custom(this.status, notice);
 	}
 	else {
-		notice(status, response && response.error);
+		notice(this.status, response && response.error);
 	}
 }
 
@@ -763,9 +778,8 @@ function cancel() {
 				<nav>
 					<i id="expire"></i>
 					<ul>
-						<li><h1><a href="dashboard.html" target="main">대시보드</a></h1>
+						<li><h1><a href="2.0.3.2/dashboard.html" target="main">대시보드</a></h1>
 						<li><h1><a href="list.html" target="main">장비목록</a></h1>
-						<li><h1><a href="map.html" target="main">구성도</a></h1>
 						<li><h1><a href="event.html" target="main">이벤트</a></h1>
 						<li><h1><a href="scrap.html" target="main">스크랩</a></h1>
 					</ul>
@@ -825,7 +839,7 @@ function cancel() {
 		<script src="js/md5.js"></script>
 		<script>
 
-var agent = "http://",
+var agent,
 	initialized = false,
 	frame = document.getElementById("frame"),
 	sendRequest,
@@ -838,7 +852,6 @@ var agent = "http://",
 	listener = {
 		command: "listen"
 	},
-	index = {},
 	count = document.getElementById("count"),
 	dialog = document.getElementById("dialog"),
 	log = document.getElementById("log"),
@@ -864,7 +877,7 @@ var agent = "http://",
 			if (!isNaN(args[1]) && args[1] > -1 && args[1] < 65536) {
 				connect.elements["tcp"].value = args[1];
 				
-				window.agent += agent;
+				window.agent = "http://" + agent;
 				
 				return trySignIn(signin.elements["username"]);
 			}
