--- a/search_dialog.html
+++ b/search_dialog.html
@@ -22,8 +22,16 @@ form {
 	/*box-shadow: 0px 0px 20px 10px #ddd;*/
 }
 
+h2 {
+	background-color: #0084ff;
+	padding: 10px; margin: 0;
+	color: #fff;
+}
+
 .table {
-	margin-bottom: 5px;
+	border: 1px solid #aaa;
+	padding: 1em;
+	margin: 1em 0;
 }
 
 .table ul {
