--- a/test.html
+++ b/test.html
@@ -7,162 +7,15 @@
 		<title>ITAhM</title>
 		
 		<style>
-body {
-	position: fixed; top: 0; right: 0; bottom: 0; left: 0;
-	padding: 0; margin: 0;
-	display: flex;
-}
-
-section {
-	
-	flex: 1;
-	display: flex; flex-direction: column;
-}
-
-div,svg {
-	flex: 1;
-	position: relative;
-}
-
-div::after {
-	content: attr(data-value);
-	position: absolute; top: 1em; left: 1em;
-}
-.a {
-	
-}
-.b {
-	background-color: #0f0;
-}
-.c {
-	background-color: #00f;
-}
-.d {
-	background-color: #ff0;
-}
-.e {
-	background-color: #0ff;
-}
-.f {
-	background-color: #f0f;
-}
-
-iframe {
-	width: 100%; height: 100%;
-	
-}
-
-.x {
-	animation: hbar 1s;
-	transform-origin: left;
-}
-
-svg {
-	background-color: gray;
-}
-
-@keyframes hbar1 {
-	from {
-		transform: scale(0, 1);
-	}
-	to {
-		transform: scale(1, 1);
-	}
-}
-
-.pie {
-    border-radius: 50%;
-    background-color: green;
-    width: 5em;
-    height: 5em;
-    border: 2px solid green;
-    position: relative;
-}
-
-.ten {
-    background-image:
-        /* 10% = 126deg = 90 + ( 360 * .1 ) */
-        linear-gradient(306deg, transparent 50%, white 50%),
-        linear-gradient(90deg, white 50%, transparent 50%);
-}
-
-.pie::after {
-	content: "50%";
-	position: absolute; top: 50%; left: 50%;
-	transform: translateX(-50%) translateY(-50%);
-	background-color: #000;
-	color: #fff;
-	height: 4em;
-	width: 4em;
-	border-radius: 50%;
-	display: flex; justify-content: center; align-items: center;
-}
-
-.test {
-	width: 5em;
-    height: 5em;
-}
-
 		</style>
 		<script>
 
-let draggable;
-
-function setDraggable(e) {
-	e.draggable = true;
-	
-	e.addEventListener("dragstart", function (e) {
-		e.stopPropagation();
-		
-		window.draggable = this;
-	});
-	
-	e.addEventListener("dragover", function (e) {
-		e.preventDefault();
-		
-		if (window.draggable === this) {
-			return;
-		}
-		
-		const isChart = window.draggable.classList.contains("x");
-		
-		if (isChart === this.classList.contains("x")) {
-			switch (window.draggable) {
-			case this.previousElementSibling:
-				this.parentNode.insertBefore(this, window.draggable);
-				
-				break;
-			default:
-				this.parentNode.insertBefore(window.draggable, this);
-			}
-		}
-		else if (isChart && window.draggable.parentNode != this) {
-			this.insertBefore(window.draggable, undefined);
-		}
-	});
-}
-		
 		</script>
 	</head>
 	<body>
-		<section>
-			<svg class="a x">
-			</svg>
-			<div class="x">
-				<div class="pie ten"></div>
-			</div>
-			<div class="c x">
-				<div class="test ten"></div>
-			</div>
-		</section>
-		<section>
-			<div class="d x"><iframe></iframe></div>
-			<div class="e x"><iframe></iframe></div>
-			<div class="f x" data-value="Why?"><iframe></iframe></div>
-		</section>
+	
 		<script>
-
-console.log(window.id);
+console.log(3 => 1);
 		</script>
 	
 	</body>
