--- a/status.html
+++ b/status.html
@@ -1039,7 +1039,7 @@ var ip, snmp, ifSpeed,
 	iFaceGauge = document.querySelector(".i_face.item"),
 	chartFrame = document.getElementById("chart"),
 	rtFrame = document.getElementById("realtime_response");
-
+window.
 window.onunload = function () {
 	for (var resource in realtime) {
 		for (var index in realtime[resource]) {
